# envx

./: .gitignore  .markdownlint.yml  .typos.toml  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  justfile
.cargo/: config.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml  performance-issue.yml  question.yml
.github/workflows/: benchmark.yml  codspeed.yml  release.yml
crates/cli/: Cargo.toml  README.md
crates/cli/src/: cli.rs  deps.rs  docs.rs  lib.rs  list.rs  monitor.rs  path.rs  profile.rs  project.rs  rename.rs  replace.rs  snapshot.rs  watch.rs  wizard.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: analysis.rs  env.rs  env_watcher.rs  error.rs  exporter.rs  history.rs  importer.rs  lib.rs  path.rs  profile_manager.rs  project_config.rs  project_manager.rs  snaphot.rs  snapshot.rs  snapshot_manager.rs  templates.rs  wizard.rs
crates/envx/: Cargo.toml
crates/envx/src/: main.rs
crates/tui/: Cargo.toml  README.md
crates/tui/src/: app.rs  lib.rs  ui.rs
