[workspace]
members = ["crates/core", "crates/tui", "crates/cli", "crates/envx"]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]
license = "MIT"
description = "A modern, cross-platform environment variable manager with TUI and CLI interfaces"
readme = "README.md"
homepage = "https://github.com/mikeleppane/envx"
repository = "https://github.com/mikeleppane/envx"
keywords = ["environment", "env", "cli", "tui", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
envx-core = { path = "crates/core", version = "=0.6.0" }
envx-cli = { path = "crates/cli", version = "=0.6.0" }
envx-tui = { path = "crates/tui", version = "=0.6.0" }
# Common dependencies
thiserror = "2.0.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive", "env"] }
indexmap = "2.11.0"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
color-eyre = "0.6.5"
regex = "1.11"
tempfile = "3.21.0"
dirs = "6.0.0"
serde_yaml = "0.9.33"
ctrlc = "3.4.7"
notify = "8.2.0"
notify-debouncer-mini = "0.7.0"
walkdir = "2.5.0"
glob = "0.3.3"
ahash = { version = "0.8", features = ["serde"] }

# TUI dependencies
ratatui = "0.29.0"
crossterm = "0.29.0"
tui-textarea = "0.7.0"
comfy-table = "7.2.0"
console = "0.16.0"
tui-input = "0.14.0"
dialoguer = "0.12.0"
colored = "3.0.0"

# Platform-specific dependencies (to be used in individual crates)
winreg = "0.55.0"
nix = { version = "0.30.1", features = ["process", "env"] }

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = false
incremental = true
codegen-units = 256

[profile.dev.package."*"]
opt-level = 3

[profile.bench]
inherits = "release"
debug = true
