[package]
name = "envx-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core functionality for envx - environment variable management"
keywords = ["core", "envx", "domain", "library"]
readme = "README.md"

[dependencies]
indexmap = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
color-eyre = { workspace = true }
regex = { workspace = true }
dirs = { workspace = true }
serde_yaml = { workspace = true }
notify = { workspace = true }
notify-debouncer-mini = { workspace = true }
dialoguer = { workspace = true }
glob = { workspace = true }
colored = { workspace = true }
ahash = { workspace = true }

[target.'cfg(windows)'.dependencies]
winreg = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
