[package]
name = "envx"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]
license = "MIT"
repository = "https://github.com/mikeleppane/visualvault"
homepage = "https://github.com/mikeleppane/visualvault"
description = "A secure, local-first secrets manager with encrypted storage and zero-knowledge architecture"
keywords = ["password", "manager", "vault", "secrets", "security"]
categories = ["command-line-utilities", "cryptography"]
readme = "../../README.md"


[dependencies]
envx-core = { workspace = true }
envx-cli = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.47"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5.4"

[[bin]]
name = "envx"
path = "src/main.rs"
