[package]
name = "envex"
version = "0.4.1"
edition = "2024"
rust-version = "1.85"
authors = ["Mikko Leppänen <mleppan23@gmail.com>"]
license = "MIT"
repository = "https://github.com/mikeleppane/envx"
homepage = "https://github.com/mikeleppane/envx"
description = "A modern, cross-platform environment variable manager with TUI and CLI interfaces"
keywords = ["environment", "env", "cli", "tui", "cross-platform"]
categories = ["command-line-utilities", "development-tools"]
readme = "../../README.md"


[dependencies]
envx-core = { workspace = true }
envx-cli = { workspace = true }
clap = { workspace = true }
color-eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }

[target.'cfg(windows)'.dependencies]
mimalloc = "0.1.47"

[target.'cfg(not(windows))'.dependencies]
jemallocator = "0.5.4"

[[bin]]
name = "envx"
path = "src/main.rs"
