[package]
name = "envx-tui"
edition = "2024"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true
description = "Terminal user interface for envx environment variable manager"

[dependencies]
envx-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
color-eyre = { workspace = true }
tui-input = { workspace = true }
tui-textarea = { workspace = true }
